asg/security_groups.tf
resource "aws_security_group" "ec2_group" {
  name = "ec2 group"
  ingress {
    description = "SSH"
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description     = "Connection from ALB"
    security_groups = [aws_security_group.alb_group.id]
    from_port       = 0
    to_port         = 80
    protocol        = "tcp"
  }

  egress {
    description = "Egress"
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "alb_group" {
  name = "Application Load Balancer Sec"
  ingress {
    description = "HTTPs"
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Egress"
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
